c4prj1_deck/grade.txt
Grading at Wed Sep 30 15:12:06 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘free_deck’:
deck.c:99:17: error: ‘deck’ undeclared (first use in this function)
   for(int i=0;i<deck->n_cards;i++){
                 ^
deck.c:99:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation of deck.c failed

Overall Grade: F
